le premier depot jquery

--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <title>Exemple Jquery</title>
   </head>
   <body>
-    <h1>Ceci un titre</h1>
-    <p>
+    <h1 id="demo">Ceci un titre</h1>
+    <p class="c">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
       consequatur exercitationem aperiam facere neque illo? Ut, culpa
       dignissimos autem expedita voluptas voluptates obcaecati recusandae
       deserunt sapiente sequi? Et, obcaecati debitis.
     </p>
-    <p>
+    <p class="c">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum officiis
       cupiditate blanditiis fugit ipsam sit, quas cum quidem? Aut, consequuntur!
       Sunt accusantium nisi at maxime doloribus facilis aut inventore
       exercitationem.
     </p>
     <button>Valider</button>
+    <!--Script jquery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
